frame/support/test/tests/pallet_ui/step_023.stderr
error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/step_023.rs:12:18
   |
12 |     impl<T: Config> Interface for Pallet<T> {}
   |                     ^^^^^^^^^ expected 1 type argument
